# GovFlow

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/rules/: assistant-communication.mdc
data/: fcg_region_codes.txt  gxzwfw_fcg_list_latest.html
data/exports/: _success.txt  gxzwfw_services_3113105168.json  gxzwfw_services_3113105172.json  gxzwfw_services_3113105210.json  gxzwfw_services_3113105214.json  gxzwfw_services_3113105215.json  gxzwfw_services_3113105216.json  gxzwfw_services_3113105220.json  gxzwfw_services_3113105221.json  gxzwfw_services_3113105222.json  gxzwfw_services_3113105226.json  gxzwfw_services_3113105228.json  gxzwfw_services_3113105229.json  gxzwfw_services_3113105230.json  gxzwfw_services_3113105231.json  gxzwfw_services_3113105233.json  gxzwfw_services_3113105235.json  gxzwfw_services_3113105236.json  gxzwfw_services_3113105237.json  (+22 more)
docs/: ARCHITECTURE.md  PLAN.md  QS.md  Requirments.md  TEST_REPORT.md
scripts/: backfill_embeddings.py  debug_vector_rank.py  dev_run.sh  import_gxzwfw_services.py  rebuild_vector_texts.py
sql/: schema.sql  seed_dev.sql
src/govflow/: config.py  (+2 more)
tests/: conftest.py  test_answer_auditor_config.py  test_api_smoke.py  test_bianmintong.py  test_chat_company_setup.py  test_chat_orchestrator.py  test_chat_route_unit.py  test_chat_smoke.py  test_company_setup_input_classifier.py  test_company_setup_mock_integrations.py  test_deepseek_client.py  test_eval_cases.py  test_hybrid_retriever.py  test_rag_keywords.py  test_template_render.py  test_zhengwutong.py
(+91 files in other folders)
